kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: validator-service
  name: validator-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: validator-service
    spec:
      containers:
      - image: beaware/validator-service:IMAGE_TAG
        imagePullPolicy: Always
        name: validator-service
        ports:
        - containerPort: 2356
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
