kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: validator-service
  name: validator-service
spec:
  selector:
    app: validator-service
  ports:
  - name: http
    port: 7856
    protocol: TCP
    targetPort: 2356
